Binary Device Index Selection Logic Added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,6 @@ add_custom_command(TARGET recording_app POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E echo "Verifying plugin registration..."
     COMMAND sh -c "ffmpeg -f avfoundation -list_devices true -i \"\" 2>&1 | sed -n '/AVFoundation video devices:/,/AVFoundation audio devices:/p;/AVFoundation audio devices:/,/^$/p' | grep -v 'Error\\|WARNING\\|^$' || true"
     VERBATIM
-    COMMAND sh -c "GST_DEBUG=3 ./recording_app --gst-plugin-path=${GST_PLUGIN_PATH} --gst-disable-registry-fork --version"
-    COMMENT "Running basic plugin verification"
+    #COMMAND sh -c "GST_DEBUG=3 ./recording_app --gst-plugin-path=${GST_PLUGIN_PATH} --gst-disable-registry-fork --version"
+    #COMMENT "Running basic plugin verification"
 )
